# ISP-tasks

./: .clang-format  CMakeLists.txt  README.md
DTA/: CMakeLists.txt  README.md  dump.sh
DTA/headers/: dta.hpp  test.hpp
DTA/sources/: dta.cpp  main.cpp  test.cpp
Pools/: CMakeLists.txt
Pools/headers/: pools.hpp
Pools/sources/: main.cpp  pools.cpp
Sink-Source/: CMakeLists.txt  README.md
Sink-Source/headers/: dta.hpp  test.hpp
Sink-Source/sources/: dta.cpp  main.cpp  test.cpp
headers/: pools.hpp
sources/: main.cpp  pools.cpp
